<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        android:hint="@string/first_name"
        style="@style/layoutStyle"
        android:background="@drawable/edit_text_field"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/edFirstName"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        android:hint="@string/last_name"
        style="@style/layoutStyle"
        android:background="@drawable/edit_text_field"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/edLastName"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        android:hint="@string/age"
        style="@style/layoutStyle"
        android:background="@drawable/edit_text_field"
        android:inputType="number"
        android:digits="0123456789"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/edAge"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        android:hint="@string/email"
        style="@style/layoutStyle"
        android:background="@drawable/edit_text_field"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOperationState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/edEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        android:background="@drawable/rounded_rectangle"
        style="@style/layoutStyle"
        android:textColor="@color/grey" />

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvOperationState"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/add_user"
            style="@style/layoutStyle"
            android:textColor="@color/grey"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/green"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/remove_user"
            style="@style/layoutStyle"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/orange"
            android:textColor="@color/grey"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_user"
            style="@style/layoutStyle"
            android:textColor="@color/grey"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/lilac"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutActiveUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/layoutButtons"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvActiveUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutButtons"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/peach"
            style="@style/layoutStyle"
            android:text="@string/number_of_active_users"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvActiveUsersNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="10dp"
            style="@style/layoutStyle"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/white"
            android:textColor="@color/grey"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDeletedUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/layoutActiveUsers"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDeletedUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutButtons"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/peach"
            style="@style/layoutStyle"
            android:text="@string/number_of_deleted_users"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDeletedUsersNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="10dp"
            style="@style/layoutStyle"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/white"
            android:textColor="@color/grey"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>